--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "mocha --recursive"
+    "test": "jest",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "keywords": [],
   "author": "JSisques",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -28,8 +30,12 @@
   "devDependencies": {
     "chai": "^5.1.1",
     "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "jsdoc": "^4.0.3",
     "mocha": "^10.7.3",
     "mock-req-res": "^1.2.1",
+    "mongodb-memory-server": "^10.0.0",
     "nodemon": "^3.1.4",
     "sinon": "^18.0.0",
     "supertest": "^7.0.0"
