--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -15,10 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mongodb:
-        image: mongo:latest
+        image: mongo
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 27017:27017
-        options: --health-cmd "nc -z localhost 27017" --health-interval 10s --health-timeout 60s --health-retries 10
 
     steps:
       - name: Checkout repository
