--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -35,10 +35,10 @@ jobs:
 
       - name: Build and Push Docker Image (Standard Node.js)
         run: |
-          docker build -f Dockerfile -t gardenia-backend:${{ env.TAG }} .
+          docker build -f Dockerfile -t jsisques/gardenia-backend:${{ env.TAG }} .
           docker push jsisques/gardenia-backend:${{ env.TAG }}
 
       - name: Build and Push Docker Image (Alpine Node.js)
         run: |
-          docker build -f Dockerfile-alpine -t gardenia-backend:alpine-${{ env.TAG }} .
+          docker build -f Dockerfile-alpine -t jsisques/gardenia-backend:alpine-${{ env.TAG }} .
           docker push jsisques/gardenia-backend:alpine-${{ env.TAG }}
