--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -14,11 +14,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set Date and Time
+        id: datetime
+        run: echo "CURRENT_DATETIME=$(date +'%d/%m/%Y %H:%M:%S')" >> $GITHUB_ENV
+
+      - name: Notify Start
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"🔄 Workflow started for commit: ${{ github.sha }} on branch: ${{ github.ref }} at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Notify Docker Login Status
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ Docker login succeeded at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        continue-on-error: true
+
+      - name: Notify Docker Login Status
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"❌ Docker login failed at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Determine tag
         id: determine_tag
@@ -35,8 +54,39 @@ jobs:
         run: |
           docker build -f Dockerfile -t jsisques/gardenia-backend:${{ env.TAG }} .
           docker push jsisques/gardenia-backend:${{ env.TAG }}
+        continue-on-error: true
+        id: build-push-standard
+
+      - name: Notify Build and Push Status (Standard Node.js)
+        if: steps.build-push-standard.outcome == 'success'
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ Built and pushed standard Node.js image successfully at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        continue-on-error: true
+
+      - name: Notify Build and Push Status (Standard Node.js)
+        if: steps.build-push-standard.outcome == 'failure'
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"❌ Failed to build and push standard Node.js image at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Build and Push Docker Image (Alpine Node.js)
         run: |
           docker build -f Dockerfile-alpine -t jsisques/gardenia-backend:alpine-${{ env.TAG }} .
           docker push jsisques/gardenia-backend:alpine-${{ env.TAG }}
+        continue-on-error: true
+        id: build-push-alpine
+
+      - name: Notify Build and Push Status (Alpine Node.js)
+        if: steps.build-push-alpine.outcome == 'success'
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ Built and pushed Alpine Node.js image successfully at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        continue-on-error: true
+
+      - name: Notify Build and Push Status (Alpine Node.js)
+        if: steps.build-push-alpine.outcome == 'failure'
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"❌ Failed to build and push Alpine Node.js image at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify Completion
+        if: success() || failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ Workflow completed for commit: ${{ github.sha }} on branch: ${{ github.ref }} with status: ${{ job.status }} at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
