--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Notify Start
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"🔄 Workflow started for commit: ${{ github.sha }} on branch: ${{ github.ref }} at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"${{ env.CURRENT_DATETIME }}"} | 🔄 Workflow started for commit: ${{ github.sha }} on branch: ${{ github.ref }}' ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -31,7 +31,7 @@ jobs:
       - name: Notify Docker Login Status
         if: success()
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ Docker login succeeded at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"${{ env.CURRENT_DATETIME }}"} | ✅ Docker login succeeded at ${{ env.CURRENT_DATETIME }}"}' ${{ secrets.SLACK_WEBHOOK_URL }}
         continue-on-error: true
 
       - name: Notify Docker Login Status
