--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "jest",
+    "dev": "cross-env NODE_ENV=dev node index.js",
+    "start": "cross-env NODE_ENV=prod node index.js",
+    "local": "cross-env NODE_ENV=local nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest",
     "docs": "jsdoc -c jsdoc.json"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
