--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,6 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -132,4 +131,5 @@ dist
 # Custom
 README.pdf
 CHANGELOG.pdf
-.env
+.env.prod
+.env.dev
