--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,12 +1,11 @@
 name: CI/CD for Docker Images
 
 on:
-  push:
+  pull_request:
     branches:
       - release/*
       - dev
       - master
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
