--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,11 +1,12 @@
 name: CI/CD for Docker Images
 
 on:
-  pull_request:
+  push:
     branches:
       - release/*
       - dev
       - master
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
