--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -34,18 +34,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run hadolint
-        uses: hadolint/hadolint-action@f988afea3da57ee48710a9795b6bb677cc901183
-        with:
-          dockerfile: ./Dockerfile
-          format: sarif
-          output-file: hadolint-results.sarif
-          no-fail: true
+      - name: Run hadolint on all Dockerfiles
+        id: hadolint
+        run: |
+          mkdir -p hadolint-results
+          for dockerfile in ./docker/*; do
+            if [[ -f "$dockerfile" ]]; then
+              echo "Running hadolint on $dockerfile"
+              hadolint -f sarif "$dockerfile" > "hadolint-results/$(basename $dockerfile).sarif"
+            fi
+          done
+          # Combine all SARIF files into one
+          jq -s 'add' hadolint-results/*.sarif > hadolint-results/combined-results.sarif
+          ls -la hadolint-results/
 
-      - name: Upload analysis results to GitHub
+      - name: Upload combined SARIF results to GitHub
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: hadolint-results.sarif
+          sarif_file: hadolint-results/combined-results.sarif
           wait-for-processing: true
 
       - name: Notify Upload Status
