--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install hadolint
         run: |
-          curl -sSfL https://github.com/hadolint/hadolint/releases/download/v2.15.0/hadolint-Linux-x86_64 -o /usr/local/bin/hadolint
+          curl -sSfL https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64 -o /usr/local/bin/hadolint
           chmod +x /usr/local/bin/hadolint
 
       - name: Run hadolint on all Dockerfiles
